Update title from Assistant Professor to Professor

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@ considering also the collaboration and cooperation with humans. <a href="https:/
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/testimonials/thPhuong.jpg" class="testimonial-img" alt="">
                         <h3>Nguyen Thanh Phuong</h3>
-                        <h4><b>Assitant Professor</b></h4>
+                        <h4><b>Professor</b></h4>
                         <h4>Department of Information Engineering, Computer Science and Mathematics</h4>
                         <h4>University of L’Aquila</h4>
                         <h4><a href=mailto:“phuong.nguyen@univaq.it">phuong.nguyen@univaq.it</a></h4>
