Update link for PhD thesis presentation

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <h3 class="mb-0">PhD Thesis</h3>
                         <ol>
                             <li>
-                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022. <a href="https://docs.google.com/presentation/d/1e3Ev_TEtM8t-wVGtipxTJQg8j2Y_jg2D/edit?usp=sharing&ouid=101958928903356864861&rtpof=true&sd=true">Link</a></a>
+                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022. <a href="https://dcollection.jnu.ac.kr/public_resource/pdf/000000067741_20260212212707.pdf">Link</a></a>
                             </li>
                         </ol>
                     </div>
