--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                         <h3 class="mb-0">PhD Thesis</h3>
                         <ol>
                             <li>
-                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022. <a href="https://dcollection.jnu.ac.kr/public_resource/pdf/000000067741_20260212212707.pdf">Link</a></a>
+                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022. <a href="https://dcollection.jnu.ac.kr/public_resource/pdf/000000067741_20260212212707.pdf">Link Thesis</a>  
+                         <a href="https://docs.google.com/presentation/d/1vCH1dcAvkvUGqp3XcGvc4Z8bAhrovVT6/edit?usp=sharing&ouid=109177319463343791070&rtpof=true&sd=true">Link Presentation</a> </a>
                             </li>
                         </ol>
                     </div>
@@ -177,7 +178,7 @@
                         <ol>
                             <li>
                                 <b>Tran M-T</b>, Lee G-S. <br>“<em> Binarization of music score with complex background by deep convolutional neural networks.
-                                  </em>”. Registration of copyright number 206371-0001063, Korea 2021.  <a href="https://drive.google.com/file/d/1-vzJZaAsbfnSYZhC75KQquWfidqkpWvA/view?usp=sharing">Link</a></a>
+                                  </em>”. Registration of copyright number 206371-0001063, Korea 2021.  <a href="https://drive.google.com/file/d/1hnHH0HpPXXpL5jI5-lNN-s4XYcY1FOtB/view?usp=sharing">Link</a></a>
                             </li>
                         </ol>
                     </div>
