Update counter values and thesis links in index.html
Updated counter values and modified thesis presentation links.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="22" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="27" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Papers</strong></p>
             </div>
           </div>
@@ -154,7 +154,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="75" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="162" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Citations</strong></p>
             </div>
           </div>
@@ -165,8 +165,10 @@
                         <h3 class="mb-0">PhD Thesis</h3>
                         <ol>
                             <li>
-                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022. <a href="https://dcollection.jnu.ac.kr/public_resource/pdf/000000067741_20260212212707.pdf">Link Thesis</a>  
-                         <a href="https://docs.google.com/presentation/d/1vCH1dcAvkvUGqp3XcGvc4Z8bAhrovVT6/edit?usp=sharing&ouid=109177319463343791070&rtpof=true&sd=true">Link Presentation</a> </a>
+                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. 2022. <a href="https://dcollection.jnu.ac.kr/srch/srchDetail/000000067741?localeParam=en#
+
+">1. Link Thesis</a>  
+                         <a href="https://docs.google.com/presentation/d/1vCH1dcAvkvUGqp3XcGvc4Z8bAhrovVT6/edit?usp=sharing&ouid=109177319463343791070&rtpof=true&sd=true">2. Link Presentation</a> </a>
                             </li>
                         </ol>
                     </div>
