--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Gran Sasso Science Institute</strong> <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>L'Aquila, Italy</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in AI</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>minhtrieu.tran@gssi.it</span></li>                 
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>minhtrieu.tran@gssi.it</span></li>         
+                  <li><i class="bi bi-chevron-right"></i> <strong>Google Scholar:</strong> <span><a href="https://scholar.google.com/citations?user=d8UVW1QAAAAJ&hl=en">Minh-Trieu Tran </a>   </span></li> 
                 </ul>
               </div>
             </div>
