--- a/index.html
+++ b/index.html
@@ -307,6 +307,13 @@
                                 <a
                                     href="https://sites.google.com/view/ws-daffir/ws_day?authuser=0">Link</a>
                               </li>
+
+                              <li>                                
+                                Hong-Vy-Ngoc Le, <b>Minh-Trieu Tran</b>. <br>“<em>GRU-Based Framework for Stock Prediction</em>”.
+                               In Proceedings of the International Conference on Smart Media and Applications, 2025. At: Yildiz Technical University, Davutpaşa, Turkiye.
+                                <a
+                                    href="https://d2j16w31g89z0j.cloudfront.net/site/sma2025/proceeding/2025%20SMA%20%E1%84%91%E1%85%B3%E1%84%85%E1%85%A9%E1%84%89%E1%85%B5%E1%84%83%E1%85%B5%E1%86%BC_%E1%84%8E%E1%85%AC%E1%84%8C%E1%85%A9%E1%86%BC.pdf">Link</a>
+                              </li>
                           
                               <li>                                
                                 <b>Minh-Trieu Tran</b> and Lee G-S. <br>“<em>Preserving Text Characteristics Through Feature Concatenation for The Detection of Occluded Scene Text</em>”.
